force-app/main/default/objects/vaultc2__c/vaultc2__c.object-meta.xml
<CustomObject>
    <label>vaultc2</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultc2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>