force-app/main/default/objects/vaultc2__c/fields/checkbox8__c.field-meta.xml
<CustomField>
    <fullName>checkbox8__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox8</label>
    <type>Checkbox</type>
</CustomField>