force-app/main/default/objects/vaultc2__c/fields/date1__c.field-meta.xml
<CustomField>
    <fullName>date1__c</fullName>
    <label>Date1</label>
    <type>Date</type>
</CustomField>