force-app/main/default/objects/vaultc2__c/fields/dateTime2__c.field-meta.xml
<CustomField>
    <fullName>dateTime2__c</fullName>
    <label>Date/Time2</label>
    <type>DateTime</type>
</CustomField>