force-app/main/default/objects/vaultc2__c/fields/email3__c.field-meta.xml
<CustomField>
    <fullName>email3__c</fullName>
    <label>Email3</label>
    <type>Email</type>
</CustomField>