force-app/main/default/objects/vaultc2__c/fields/email6__c.field-meta.xml
<CustomField>
    <fullName>email6__c</fullName>
    <label>Email6</label>
    <type>Email</type>
</CustomField>