force-app/main/default/objects/vaultc2__c/fields/geo2__c.field-meta.xml
<CustomField>
    <fullName>geo2__c</fullName>
    <label>Geolocation2</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>