force-app/main/default/objects/vaultc2__c/fields/number14__c.field-meta.xml
<CustomField>
    <fullName>number14__c</fullName>
    <label>Number14</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>