force-app/main/default/objects/vaultc2__c/fields/number21__c.field-meta.xml
<CustomField>
    <fullName>number21__c</fullName>
    <label>Number21</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>