force-app/main/default/objects/vaultc2__c/fields/number23__c.field-meta.xml
<CustomField>
    <fullName>number23__c</fullName>
    <label>Number23</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>