force-app/main/default/objects/vaultc2__c/fields/percent3__c.field-meta.xml
<CustomField>
    <fullName>percent3__c</fullName>
    <label>Percent3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>