force-app/main/default/objects/vaultc2__c/fields/percent9__c.field-meta.xml
<CustomField>
    <fullName>percent9__c</fullName>
    <label>Percent9</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>