force-app/main/default/objects/vaultc2__c/fields/phone5__c.field-meta.xml
<CustomField>
    <fullName>phone5__c</fullName>
    <label>Phone5</label>
    <type>Phone</type>
</CustomField>