force-app/main/default/objects/vaultc2__c/fields/phone7__c.field-meta.xml
<CustomField>
    <fullName>phone7__c</fullName>
    <label>Phone7</label>
    <type>Phone</type>
</CustomField>