force-app/main/default/objects/vaultc2__c/fields/text13__c.field-meta.xml
<CustomField>
    <fullName>text13__c</fullName>
    <label>Text13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>