force-app/main/default/objects/vaultc2__c/fields/text14__c.field-meta.xml
<CustomField>
    <fullName>text14__c</fullName>
    <label>Text14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>