force-app/main/default/objects/vaultc2__c/fields/text22__c.field-meta.xml
<CustomField>
    <fullName>text22__c</fullName>
    <label>Text22</label>
    <length>255</length>
    <type>Text</type>
</CustomField>