force-app/main/default/objects/vaultc2__c/fields/url3__c.field-meta.xml
<CustomField>
    <fullName>url3__c</fullName>
    <label>URL3</label>
    <type>Url</type>
</CustomField>